# civ-weave

./: .yamllint  README.md  pyproject.toml
.github/workflows/: ci.yml
civ_weave/: __init__.py  utils.py
civ_weave/components/: __init__.py  resources.py
civ_weave/data/: __init__.py  rarity_level.yml  resource.yml  resource_rarity.yml  settlement.yml
civ_weave/models/: __init__.py  resources.py  settlement.py
tests/: __init__.py
tests/components/: __init__.py  test_settlement.py
tests/data/: __init__.py  settlement_test_data.yml
tests/models/: test_settlement.py
