[tool.poetry]
name = "civ-weave"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.1"
kuzu = "^0.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
